--- a/.env-template
+++ b/.env-template
@@ -5,9 +5,10 @@ API_HOST=127.0.0.1
 
 # MySQL connection
 
-MYSQL_PORT=3306 //Default port 
+MYSQL_DB_NAME=your_db_name
+MYSQL_PORT=3306 //*NB: default port for MySQL 
 MYSQL_HOST=localhost
-MYSQL_USERNAME=[your_username]
-MYSQL_PASSWORD=[your_password]
+MYSQL_USERNAME=your_username
+MYSQL_PASSWORD=your_password
 
 
