--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sprint_4_2_dice_game",
   "version": "1.0.0",
-  "description": "",
+  "description": "API implementation for a simple dice game",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
